tests/snapshots/cli_rollback__rollback_before_any_switch_refuses.snap
---
source: tests/cli_rollback.rs
expression: r.stderr
---
ricepilot: refusing: there is no generation to roll back from: ricepilot has not switched anything on this machine (<HOME>/.local/state/ricepilot/generations/current) [R7]
